# gst-discordsender

./: Cargo.toml  flake.nix
.github/workflows/: rust.yml
src/: constants.rs  crypto.rs  lib.rs
src/discordstreamer/: imp.rs  mod.rs
tests/: discordstreamer.rs
