[package]
name = "gst-plugin-discordstreamer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ImTheSquid/gst-discordpacketizer"
description = "A gst plugin to stream to discord servers"
authors = ["Lorenzo Rizzotti <dev@dreaming.codes>", "ImTheSquid"]

[lib]
name = "discordstreamer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO: At the end of the project, check if gstreamer 1_22 is needed
[dependencies]
gst = { package = "gstreamer", version = "0.20.5", features = ["v1_22"] }
gst-app = { package = "gstreamer-app", version = "0.20.0", features = ["v1_22"] }
gst-base = { package = "gstreamer-base", version = "0.20.5", features = ["v1_22"] }
gst-video = { package = "gstreamer-video", version = "0.20.4", features = ["v1_22"] }
gst-audio = { package = "gstreamer-audio", version = "0.20.4", features = ["v1_22"] }
tokio = { version = "1.28.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
once_cell = "1.17.1"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"
