[package]
name = "gst-plugin-discordstreamer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ImTheSquid/gst-discordpacketizer"
description = "A gst plugin to stream to discord servers"
authors = ["Lorenzo Rizzotti <dev@dreaming.codes>", "ImTheSquid"]

[lib]
name = "discordstreamer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO: At the end of the project, check if gstreamer 1_22 is needed
[dependencies]
gst = { package = "gstreamer", version = "0.20.5", features = ["v1_18"] }
gst-app = { package = "gstreamer-app", version = "0.20.0", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", version = "0.20.5", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", version = "0.20.4", features = ["v1_18"] }
gst-audio = { package = "gstreamer-audio", version = "0.20.4", features = ["v1_18"] }
once_cell = "1.17.1"
parking_lot = { version = "0.12.1" }
discortp = { version = "0.5.0", features = ["discord-full", "rtp"] }
byteorder = "1.4.3"
rand = "0.8.5"
#TODO: Update to 0.9 (NOTE: 0.9 breaks crypto.rs changes are needed)
xsalsa20poly1305 = { version = "0.8", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_plain = "1.0.1"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"
